parser.output
   0  $accept : %entry% $end

   1  nsenter :

   2  nsleave :

   3  nsreenter :

   4  translation_unit : external_declaration_list Teof

   5  external_declaration_list :
   6                            | external_declaration_list external_declaration

   7  external_declaration : Tdirective
   8                       | function_definition
   9                       | declaration

  10  declaration_specifiers : storage_class_specifier itype

  11  declaration : Ttypedef itype declarator Tsemi
  12              | composite_type_decl
  13              | declaration_specifiers init_declarator_list Tsemi

  14  init_declarator_list : init_declarator
  15                       | init_declarator_list Tcomma init_declarator

  16  init_declarator : declarator
  17                  | declarator Tasgn init

  18  init : assignment_expression
  19       | Tlbrace init_list Trbrace
  20       | Tlbrace init_list Tcomma Trbrace

  21  function_definition : declaration_specifiers function_declarator Tlbrace nsreenter blockitem_list_opt nsleave Trbrace

  22  function_declarator : pointer function_direct_declarator
  23                      | function_direct_declarator

  24  function_direct_declarator : direct_declarator Tlparen nsenter parameter_type_list nsleave Trparen
  25                             | direct_declarator Tlparen Trparen

  26  declarator : pointer direct_declarator
  27             | direct_declarator

  28  pointer : Tstar typequalifiers
  29          | Tstar typequalifiers pointer

  30  direct_declarator : Tidentifier
  31                    | Tlparen declarator Trparen
  32                    | direct_declarator Tlbracket Trbracket
  33                    | direct_declarator Tlbracket typequalifiers assignment_expression Trbracket
  34                    | direct_declarator Tlparen Trparen
  35                    | direct_declarator Tlparen nsenter parameter_type_list nsleave Trparen

  36  abstract_declarator_opt :
  37                          | abstract_declarator

  38  abstract_declarator : pointer
  39                      | direct_abstract_declarator
  40                      | pointer direct_abstract_declarator

  41  direct_abstract_declarator : Tlparen abstract_declarator Trparen
  42                             | Tlbracket assignment_expression_opt Trbracket
  43                             | direct_abstract_declarator Tlbracket assignment_expression_opt Trbracket
  44                             | Tlparen Trparen
  45                             | Tlparen nsenter parameter_type_list nsleave Trparen
  46                             | direct_abstract_declarator Tlparen Trparen
  47                             | direct_abstract_declarator Tlparen nsenter parameter_type_list nsleave Trparen

  48  parameter_type_list : parameter_list
  49                      | parameter_list Tcomma Tellipsis

  50  parameter_list : parameter_declaration
  51                 | parameter_list Tcomma parameter_declaration

  52  parameter_declaration : itype declarator
  53                        | itype abstract_declarator_opt

  54  init_list : init
  55            | init_list Tcomma init

  56  itype : typequalifiers itype_simple
  57        | itype_simple

  58  itypename : itype abstract_declarator_opt

  59  inttype : Tchar
  60          | Tshort
  61          | Tshort Tint
  62          | Tint
  63          | Tlong
  64          | Tlong Tint
  65          | Tlong Tlong
  66          | Tlong Tlong Tint
  67          | Tunsigned Tchar
  68          | Tunsigned Tshort
  69          | Tunsigned Tshort Tint
  70          | Tunsigned Tint
  71          | Tunsigned Tlong
  72          | Tunsigned Tlong Tint
  73          | Tunsigned Tlong Tlong
  74          | Tunsigned Tlong Tlong Tint

  75  realtype : Tfloat
  76           | Tdouble
  77           | Tlong Tdouble

  78  composite_type : Tstruct sue_identifier
  79                 | Tunion sue_identifier
  80                 | Tenum sue_identifier

  81  itype_simple : Tvoid
  82               | inttype
  83               | realtype
  84               | composite_type
  85               | Ttypedef_name

  86  typequalifier : Tconst
  87                | Tvolatile
  88                | Trestrict

  89  typequalifiers :
  90                 | typequalifiers typequalifier

  91  storage_class_specifier :
  92                          | Tstatic
  93                          | Textern

  94  sue_identifier : Tidentifier
  95                 | Ttypedef_name
  96                 | Tenum_const

  97  composite_type_decl : Tenum sue_identifier Tlbrace enumerator_list Trbrace Tsemi
  98                      | Tenum sue_identifier Tlbrace enumerator_list Tcomma Trbrace Tsemi
  99                      | Tstruct sue_identifier Tlbrace nsenter struct_declaration_list_opt nsleave Trbrace Tsemi
 100                      | Tunion sue_identifier Tlbrace nsenter struct_declaration_list_opt nsleave Trbrace Tsemi

 101  enumerator_list : enumerator
 102                  | enumerator_list Tcomma enumerator

 103  enumerator : Tidentifier
 104             | Tidentifier Teq constant_expression

 105  struct_declaration_list_opt :
 106                              | struct_declaration_list_opt struct_declaration

 107  struct_declaration : itype struct_declarator_list Tsemi

 108  struct_declarator_list : struct_declarator
 109                         | struct_declarator_list Tcomma struct_declarator

 110  struct_declarator : declarator

 111  statement : labeled_statement
 112            | compound_statement
 113            | expression_statement
 114            | selection_statement
 115            | iteration_statement
 116            | jump_statement

 117  labeled_statement : label Tcolon statement
 118                    | Tcase constant_expression Tcolon statement
 119                    | Tdefault Tcolon statement

 120  label : Tidentifier
 121        | Ttypedef_name
 122        | Tenum_const

 123  compound_statement : Tlbrace nsenter blockitem_list_opt nsleave Trbrace

 124  blockitem_list_opt :
 125                     | blockitem_list_opt declaration
 126                     | blockitem_list_opt statement

 127  expression_statement : expression_opt Tsemi

 128  expression_opt :
 129                 | expression

 130  selection_statement : Tif Tlparen expression Trparen statement
 131                      | Tif Tlparen expression Trparen statement Telse statement
 132                      | Tswitch Tlparen expression Trparen statement

 133  iteration_statement : Twhile Tlparen expression Trparen statement
 134                      | Tdo statement Twhile Tlparen expression Trparen Tsemi
 135                      | Tfor Tlparen expression_opt Tsemi expression_opt Tsemi expression_opt Trparen statement

 136  jump_statement : Tgoto label Tsemi
 137                 | Tcontinue Tsemi
 138                 | Tbreak Tsemi
 139                 | Treturn expression_opt Tsemi

 140  expression : assignment_expression
 141             | expression Tcomma assignment_expression

 142  assignment_expression : conditional_expression
 143                        | unary_expression Tasgn expression
 144                        | unary_expression Tmulasgn expression
 145                        | unary_expression Tdivasgn expression
 146                        | unary_expression Tmodasgn expression
 147                        | unary_expression Taddasgn expression
 148                        | unary_expression Tsubasgn expression
 149                        | unary_expression Tlshiftasgn expression
 150                        | unary_expression Trshiftasgn expression
 151                        | unary_expression Tandasgn expression
 152                        | unary_expression Txorasgn expression
 153                        | unary_expression Torasgn expression

 154  conditional_expression : logical_or_expression
 155                         | logical_or_expression Tquestion expression Tcolon conditional_expression

 156  constant_expression : conditional_expression

 157  logical_or_expression : logical_and_expression
 158                        | logical_or_expression Tseqor logical_and_expression

 159  logical_and_expression : inclusive_or_expression
 160                         | logical_and_expression Tseqand inclusive_or_expression

 161  inclusive_or_expression : exclusive_or_expression
 162                          | inclusive_or_expression Tor exclusive_or_expression

 163  exclusive_or_expression : and_expression
 164                          | exclusive_or_expression Txor and_expression

 165  and_expression : equality_expression
 166                 | and_expression Tamp equality_expression

 167  equality_expression : relation_expression
 168                      | equality_expression Teq relation_expression
 169                      | equality_expression Tne relation_expression

 170  relation_expression : shift_expression
 171                      | relation_expression Tlt shift_expression
 172                      | relation_expression Tgt shift_expression
 173                      | relation_expression Tle shift_expression
 174                      | relation_expression Tge shift_expression

 175  shift_expression : additive_expression
 176                   | shift_expression Tlshift additive_expression
 177                   | shift_expression Trshift additive_expression

 178  additive_expression : multiplicative_expression
 179                      | additive_expression Tplus multiplicative_expression
 180                      | additive_expression Tminus multiplicative_expression

 181  multiplicative_expression : cast_expression
 182                            | multiplicative_expression Tstar cast_expression
 183                            | multiplicative_expression Tdiv cast_expression
 184                            | multiplicative_expression Tmod cast_expression

 185  cast_expression : unary_expression
 186                  | Tlparen itypename Trparen cast_expression

 187  unary_expression : postfix_expression
 188                   | Tplusplus unary_expression
 189                   | Tminusminus unary_expression
 190                   | Tplus cast_expression
 191                   | Tminus cast_expression
 192                   | Ttilde cast_expression
 193                   | Tbang cast_expression
 194                   | Tamp cast_expression
 195                   | Tstar cast_expression
 196                   | Tsizeof unary_expression
 197                   | Tsizeof Tlparen itypename Trparen

 198  postfix_expression : primary_expression
 199                     | postfix_expression Tlbracket expression Trbracket
 200                     | postfix_expression Tlparen argument_expression_list_opt Trparen
 201                     | postfix_expression Tdo Tidentifier
 202                     | postfix_expression Tarrow Tidentifier
 203                     | postfix_expression Tplusplus
 204                     | postfix_expression Tminusminus

 205  primary_expression : Tidentifier
 206                     | constant
 207                     | Tlparen expression Trparen

 208  argument_expression_list_opt :
 209                               | argument_expression_list

 210  argument_expression_list : assignment_expression
 211                           | argument_expression_list Tcomma assignment_expression

 212  assignment_expression_opt :
 213                            | assignment_expression

 214  constant : Tfloating_cst
 215           | Tinteger_cst
 216           | Tcharacter_cst
 217           | Tstring_literal
 218           | Tenum_const

 219  %entry% : '\001' translation_unit

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . translation_unit  (219)
	external_declaration_list : .  (5)

	.  reduce 5

	translation_unit  goto 3
	external_declaration_list  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' translation_unit .  (219)

	.  reduce 219


4: shift/reduce conflict (shift 9, reduce 91) on Tstruct
4: shift/reduce conflict (shift 10, reduce 91) on Tunion
4: shift/reduce conflict (shift 11, reduce 91) on Tenum
state 4
	translation_unit : external_declaration_list . Teof  (4)
	external_declaration_list : external_declaration_list . external_declaration  (6)
	storage_class_specifier : .  (91)

	Tdirective  shift 5
	Ttypedef  shift 6
	Textern  shift 7
	Tstatic  shift 8
	Tstruct  shift 9
	Tunion  shift 10
	Tenum  shift 11
	Teof  shift 12
	Ttypedef_name  reduce 91
	Trestrict  reduce 91
	Tchar  reduce 91
	Tshort  reduce 91
	Tint  reduce 91
	Tlong  reduce 91
	Tunsigned  reduce 91
	Tfloat  reduce 91
	Tdouble  reduce 91
	Tconst  reduce 91
	Tvolatile  reduce 91
	Tvoid  reduce 91

	external_declaration  goto 13
	function_definition  goto 14
	declaration  goto 15
	declaration_specifiers  goto 16
	storage_class_specifier  goto 17
	composite_type_decl  goto 18


state 5
	external_declaration : Tdirective .  (7)

	.  reduce 7


6: shift/reduce conflict (shift 19, reduce 89) on Ttypedef_name
6: shift/reduce conflict (shift 20, reduce 89) on Tchar
6: shift/reduce conflict (shift 21, reduce 89) on Tshort
6: shift/reduce conflict (shift 22, reduce 89) on Tint
6: shift/reduce conflict (shift 23, reduce 89) on Tlong
6: shift/reduce conflict (shift 24, reduce 89) on Tunsigned
6: shift/reduce conflict (shift 25, reduce 89) on Tfloat
6: shift/reduce conflict (shift 26, reduce 89) on Tdouble
6: shift/reduce conflict (shift 27, reduce 89) on Tvoid
6: shift/reduce conflict (shift 28, reduce 89) on Tstruct
6: shift/reduce conflict (shift 29, reduce 89) on Tunion
6: shift/reduce conflict (shift 30, reduce 89) on Tenum
state 6
	declaration : Ttypedef . itype declarator Tsemi  (11)
	typequalifiers : .  (89)

	Ttypedef_name  shift 19
	Tchar  shift 20
	Tshort  shift 21
	Tint  shift 22
	Tlong  shift 23
	Tunsigned  shift 24
	Tfloat  shift 25
	Tdouble  shift 26
	Tvoid  shift 27
	Tstruct  shift 28
	Tunion  shift 29
	Tenum  shift 30
	Trestrict  reduce 89
	Tconst  reduce 89
	Tvolatile  reduce 89

	itype  goto 31
	typequalifiers  goto 32
	itype_simple  goto 33
	inttype  goto 34
	realtype  goto 35
	composite_type  goto 36


state 7
	storage_class_specifier : Textern .  (93)

	.  reduce 93


state 8
	storage_class_specifier : Tstatic .  (92)

	.  reduce 92


state 9
	composite_type_decl : Tstruct . sue_identifier Tlbrace nsenter struct_declaration_list_opt nsleave Trbrace Tsemi  (99)

	Tidentifier  shift 37
	Ttypedef_name  shift 38
	Tenum_const  shift 39
	.  error

	sue_identifier  goto 40


state 10
	composite_type_decl : Tunion . sue_identifier Tlbrace nsenter struct_declaration_list_opt nsleave Trbrace Tsemi  (100)

	Tidentifier  shift 37
	Ttypedef_name  shift 38
	Tenum_const  shift 39
	.  error

	sue_identifier  goto 41


state 11
	composite_type_decl : Tenum . sue_identifier Tlbrace enumerator_list Trbrace Tsemi  (97)
	composite_type_decl : Tenum . sue_identifier Tlbrace enumerator_list Tcomma Trbrace Tsemi  (98)

	Tidentifier  shift 37
	Ttypedef_name  shift 38
	Tenum_const  shift 39
	.  error

	sue_identifier  goto 42


state 12
	translation_unit : external_declaration_list Teof .  (4)

	.  reduce 4


state 13
	external_declaration_list : external_declaration_list external_declaration .  (6)

	.  reduce 6


state 14
	external_declaration : function_definition .  (8)

	.  reduce 8


state 15
	external_declaration : declaration .  (9)

	.  reduce 9


state 16
	declaration : declaration_specifiers . init_declarator_list Tsemi  (13)
	function_definition : declaration_specifiers . function_declarator Tlbrace nsreenter blockitem_list_opt nsleave Trbrace  (21)

	Tidentifier  shift 43
	Tstar  shift 44
	Tlparen  shift 45
	.  error

	declarator  goto 46
	init_declarator_list  goto 47
	init_declarator  goto 48
	function_declarator  goto 49
	pointer  goto 50
	function_direct_declarator  goto 51
	direct_declarator  goto 52


17: shift/reduce conflict (shift 19, reduce 89) on Ttypedef_name
17: shift/reduce conflict (shift 20, reduce 89) on Tchar
17: shift/reduce conflict (shift 21, reduce 89) on Tshort
17: shift/reduce conflict (shift 22, reduce 89) on Tint
17: shift/reduce conflict (shift 23, reduce 89) on Tlong
17: shift/reduce conflict (shift 24, reduce 89) on Tunsigned
17: shift/reduce conflict (shift 25, reduce 89) on Tfloat
17: shift/reduce conflict (shift 26, reduce 89) on Tdouble
17: shift/reduce conflict (shift 27, reduce 89) on Tvoid
17: shift/reduce conflict (shift 28, reduce 89) on Tstruct
17: shift/reduce conflict (shift 29, reduce 89) on Tunion
17: shift/reduce conflict (shift 30, reduce 89) on Tenum
state 17
	declaration_specifiers : storage_class_specifier . itype  (10)
	typequalifiers : .  (89)

	Ttypedef_name  shift 19
	Tchar  shift 20
	Tshort  shift 21
	Tint  shift 22
	Tlong  shift 23
	Tunsigned  shift 24
	Tfloat  shift 25
	Tdouble  shift 26
	Tvoid  shift 27
	Tstruct  shift 28
	Tunion  shift 29
	Tenum  shift 30
	Trestrict  reduce 89
	Tconst  reduce 89
	Tvolatile  reduce 89

	itype  goto 53
	typequalifiers  goto 32
	itype_simple  goto 33
	inttype  goto 34
	realtype  goto 35
	composite_type  goto 36


state 18
	declaration : composite_type_decl .  (12)

	.  reduce 12


state 19
	itype_simple : Ttypedef_name .  (85)

	.  reduce 85


state 20
	inttype : Tchar .  (59)

	.  reduce 59


state 21
	inttype : Tshort .  (60)
	inttype : Tshort . Tint  (61)

	Tint  shift 54
	Tidentifier  reduce 60
	Tcomma  reduce 60
	Tstar  reduce 60
	Tlbracket  reduce 60
	Tlparen  reduce 60
	Trparen  reduce 60


state 22
	inttype : Tint .  (62)

	.  reduce 62


state 23
	inttype : Tlong .  (63)
	inttype : Tlong . Tint  (64)
	inttype : Tlong . Tlong  (65)
	inttype : Tlong . Tlong Tint  (66)
	realtype : Tlong . Tdouble  (77)

	Tint  shift 55
	Tlong  shift 56
	Tdouble  shift 57
	Tidentifier  reduce 63
	Tcomma  reduce 63
	Tstar  reduce 63
	Tlbracket  reduce 63
	Tlparen  reduce 63
	Trparen  reduce 63


state 24
	inttype : Tunsigned . Tchar  (67)
	inttype : Tunsigned . Tshort  (68)
	inttype : Tunsigned . Tshort Tint  (69)
	inttype : Tunsigned . Tint  (70)
	inttype : Tunsigned . Tlong  (71)
	inttype : Tunsigned . Tlong Tint  (72)
	inttype : Tunsigned . Tlong Tlong  (73)
	inttype : Tunsigned . Tlong Tlong Tint  (74)

	Tchar  shift 58
	Tshort  shift 59
	Tint  shift 60
	Tlong  shift 61
	.  error


state 25
	realtype : Tfloat .  (75)

	.  reduce 75


state 26
	realtype : Tdouble .  (76)

	.  reduce 76


state 27
	itype_simple : Tvoid .  (81)

	.  reduce 81


state 28
	composite_type : Tstruct . sue_identifier  (78)

	Tidentifier  shift 37
	Ttypedef_name  shift 38
	Tenum_const  shift 39
	.  error

	sue_identifier  goto 62


state 29
	composite_type : Tunion . sue_identifier  (79)

	Tidentifier  shift 37
	Ttypedef_name  shift 38
	Tenum_const  shift 39
	.  error

	sue_identifier  goto 63


state 30
	composite_type : Tenum . sue_identifier  (80)

	Tidentifier  shift 37
	Ttypedef_name  shift 38
	Tenum_const  shift 39
	.  error

	sue_identifier  goto 64


state 31
	declaration : Ttypedef itype . declarator Tsemi  (11)

	Tidentifier  shift 43
	Tstar  shift 44
	Tlparen  shift 45
	.  error

	declarator  goto 65
	pointer  goto 66
	direct_declarator  goto 67


state 32
	itype : typequalifiers . itype_simple  (56)
	typequalifiers : typequalifiers . typequalifier  (90)

	Ttypedef_name  shift 19
	Trestrict  shift 68
	Tchar  shift 20
	Tshort  shift 21
	Tint  shift 22
	Tlong  shift 23
	Tunsigned  shift 24
	Tfloat  shift 25
	Tdouble  shift 26
	Tconst  shift 69
	Tvolatile  shift 70
	Tvoid  shift 27
	Tstruct  shift 28
	Tunion  shift 29
	Tenum  shift 30
	.  error

	itype_simple  goto 71
	inttype  goto 34
	realtype  goto 35
	composite_type  goto 36
	typequalifier  goto 72


state 33
	itype : itype_simple .  (57)

	.  reduce 57


state 34
	itype_simple : inttype .  (82)

	.  reduce 82


state 35
	itype_simple : realtype .  (83)

	.  reduce 83


state 36
	itype_simple : composite_type .  (84)

	.  reduce 84


state 37
	sue_identifier : Tidentifier .  (94)

	.  reduce 94


state 38
	sue_identifier : Ttypedef_name .  (95)

	.  reduce 95


state 39
	sue_identifier : Tenum_const .  (96)

	.  reduce 96


state 40
	composite_type_decl : Tstruct sue_identifier . Tlbrace nsenter struct_declaration_list_opt nsleave Trbrace Tsemi  (99)

	Tlbrace  shift 73
	.  error


state 41
	composite_type_decl : Tunion sue_identifier . Tlbrace nsenter struct_declaration_list_opt nsleave Trbrace Tsemi  (100)

	Tlbrace  shift 74
	.  error


state 42
	composite_type_decl : Tenum sue_identifier . Tlbrace enumerator_list Trbrace Tsemi  (97)
	composite_type_decl : Tenum sue_identifier . Tlbrace enumerator_list Tcomma Trbrace Tsemi  (98)

	Tlbrace  shift 75
	.  error


state 43
	direct_declarator : Tidentifier .  (30)

	.  reduce 30


state 44
	pointer : Tstar . typequalifiers  (28)
	pointer : Tstar . typequalifiers pointer  (29)
	typequalifiers : .  (89)

	.  reduce 89

	typequalifiers  goto 76


state 45
	direct_declarator : Tlparen . declarator Trparen  (31)

	Tidentifier  shift 43
	Tstar  shift 44
	Tlparen  shift 45
	.  error

	declarator  goto 77
	pointer  goto 66
	direct_declarator  goto 67


state 46
	init_declarator : declarator .  (16)
	init_declarator : declarator . Tasgn init  (17)

	Tasgn  shift 78
	Tcomma  reduce 16
	Tsemi  reduce 16


state 47
	declaration : declaration_specifiers init_declarator_list . Tsemi  (13)
	init_declarator_list : init_declarator_list . Tcomma init_declarator  (15)

	Tcomma  shift 79
	Tsemi  shift 80
	.  error


state 48
	init_declarator_list : init_declarator .  (14)

	.  reduce 14


state 49
	function_definition : declaration_specifiers function_declarator . Tlbrace nsreenter blockitem_list_opt nsleave Trbrace  (21)

	Tlbrace  shift 81
	.  error


state 50
	function_declarator : pointer . function_direct_declarator  (22)
	declarator : pointer . direct_declarator  (26)

	Tidentifier  shift 43
	Tlparen  shift 45
	.  error

	function_direct_declarator  goto 82
	direct_declarator  goto 83


state 51
	function_declarator : function_direct_declarator .  (23)

	.  reduce 23


state 52
	function_direct_declarator : direct_declarator . Tlparen nsenter parameter_type_list nsleave Trparen  (24)
	function_direct_declarator : direct_declarator . Tlparen Trparen  (25)
	declarator : direct_declarator .  (27)
	direct_declarator : direct_declarator . Tlbracket Trbracket  (32)
	direct_declarator : direct_declarator . Tlbracket typequalifiers assignment_expression Trbracket  (33)
	direct_declarator : direct_declarator . Tlparen Trparen  (34)
	direct_declarator : direct_declarator . Tlparen nsenter parameter_type_list nsleave Trparen  (35)

	Tlbracket  shift 84
	Tlparen  shift 85
	Tcomma  reduce 27
	Tasgn  reduce 27
	Tsemi  reduce 27


state 53
	declaration_specifiers : storage_class_specifier itype .  (10)

	.  reduce 10


state 54
	inttype : Tshort Tint .  (61)

	.  reduce 61


state 55
	inttype : Tlong Tint .  (64)

	.  reduce 64


state 56
	inttype : Tlong Tlong .  (65)
	inttype : Tlong Tlong . Tint  (66)

	Tint  shift 86
	Tidentifier  reduce 65
	Tcomma  reduce 65
	Tstar  reduce 65
	Tlbracket  reduce 65
	Tlparen  reduce 65
	Trparen  reduce 65


state 57
	realtype : Tlong Tdouble .  (77)

	.  reduce 77


state 58
	inttype : Tunsigned Tchar .  (67)

	.  reduce 67


state 59
	inttype : Tunsigned Tshort .  (68)
	inttype : Tunsigned Tshort . Tint  (69)

	Tint  shift 87
	Tidentifier  reduce 68
	Tcomma  reduce 68
	Tstar  reduce 68
	Tlbracket  reduce 68
	Tlparen  reduce 68
	Trparen  reduce 68


state 60
	inttype : Tunsigned Tint .  (70)

	.  reduce 70


state 61
	inttype : Tunsigned Tlong .  (71)
	inttype : Tunsigned Tlong . Tint  (72)
	inttype : Tunsigned Tlong . Tlong  (73)
	inttype : Tunsigned Tlong . Tlong Tint  (74)

	Tint  shift 88
	Tlong  shift 89
	Tidentifier  reduce 71
	Tcomma  reduce 71
	Tstar  reduce 71
	Tlbracket  reduce 71
	Tlparen  reduce 71
	Trparen  reduce 71


state 62
	composite_type : Tstruct sue_identifier .  (78)

	.  reduce 78


state 63
	composite_type : Tunion sue_identifier .  (79)

	.  reduce 79


state 64
	composite_type : Tenum sue_identifier .  (80)

	.  reduce 80


state 65
	declaration : Ttypedef itype declarator . Tsemi  (11)

	Tsemi  shift 90
	.  error


state 66
	declarator : pointer . direct_declarator  (26)

	Tidentifier  shift 43
	Tlparen  shift 45
	.  error

	direct_declarator  goto 91


state 67
	declarator : direct_declarator .  (27)
	direct_declarator : direct_declarator . Tlbracket Trbracket  (32)
	direct_declarator : direct_declarator . Tlbracket typequalifiers assignment_expression Trbracket  (33)
	direct_declarator : direct_declarator . Tlparen Trparen  (34)
	direct_declarator : direct_declarator . Tlparen nsenter parameter_type_list nsleave Trparen  (35)

	Tlbracket  shift 84
	Tlparen  shift 92
	Tcomma  reduce 27
	Tasgn  reduce 27
	Trparen  reduce 27
	Tsemi  reduce 27


state 68
	typequalifier : Trestrict .  (88)

	.  reduce 88


state 69
	typequalifier : Tconst .  (86)

	.  reduce 86


state 70
	typequalifier : Tvolatile .  (87)

	.  reduce 87


state 71
	itype : typequalifiers itype_simple .  (56)

	.  reduce 56


state 72
	typequalifiers : typequalifiers typequalifier .  (90)

	.  reduce 90


state 73
	composite_type_decl : Tstruct sue_identifier Tlbrace . nsenter struct_declaration_list_opt nsleave Trbrace Tsemi  (99)
	nsenter : .  (1)

	.  reduce 1

	nsenter  goto 93


state 74
	composite_type_decl : Tunion sue_identifier Tlbrace . nsenter struct_declaration_list_opt nsleave Trbrace Tsemi  (100)
	nsenter : .  (1)

	.  reduce 1

	nsenter  goto 94


state 75
	composite_type_decl : Tenum sue_identifier Tlbrace . enumerator_list Trbrace Tsemi  (97)
	composite_type_decl : Tenum sue_identifier Tlbrace . enumerator_list Tcomma Trbrace Tsemi  (98)

	Tidentifier  shift 95
	.  error

	enumerator_list  goto 96
	enumerator  goto 97


state 76
	pointer : Tstar typequalifiers .  (28)
	pointer : Tstar typequalifiers . pointer  (29)
	typequalifiers : typequalifiers . typequalifier  (90)

	Trestrict  shift 68
	Tconst  shift 69
	Tvolatile  shift 70
	Tstar  shift 44
	Tidentifier  reduce 28
	Tcomma  reduce 28
	Tlbracket  reduce 28
	Tlparen  reduce 28
	Trparen  reduce 28

	pointer  goto 98
	typequalifier  goto 72


state 77
	direct_declarator : Tlparen declarator . Trparen  (31)

	Trparen  shift 99
	.  error


state 78
	init_declarator : declarator Tasgn . init  (17)

	Tidentifier  shift 100
	Tenum_const  shift 101
	Tcharacter_cst  shift 102
	Tinteger_cst  shift 103
	Tfloating_cst  shift 104
	Tstring_literal  shift 105
	Tsizeof  shift 106
	Tplusplus  shift 107
	Tminusminus  shift 108
	Tamp  shift 109
	Ttilde  shift 110
	Tbang  shift 111
	Tplus  shift 112
	Tminus  shift 113
	Tstar  shift 114
	Tlbrace  shift 115
	Tlparen  shift 116
	.  error

	init  goto 117
	assignment_expression  goto 118
	conditional_expression  goto 119
	unary_expression  goto 120
	logical_or_expression  goto 121
	logical_and_expression  goto 122
	inclusive_or_expression  goto 123
	exclusive_or_expression  goto 124
	and_expression  goto 125
	equality_expression  goto 126
	relation_expression  goto 127
	shift_expression  goto 128
	additive_expression  goto 129
	multiplicative_expression  goto 130
	cast_expression  goto 131
	postfix_expression  goto 132
	primary_expression  goto 133
	constant  goto 134


state 79
	init_declarator_list : init_declarator_list Tcomma . init_declarator  (15)

	Tidentifier  shift 43
	Tstar  shift 44
	Tlparen  shift 45
	.  error

	declarator  goto 46
	init_declarator  goto 135
	pointer  goto 66
	direct_declarator  goto 67


state 80
	declaration : declaration_specifiers init_declarator_list Tsemi .  (13)

	.  reduce 13


state 81
	function_definition : declaration_specifiers function_declarator Tlbrace . nsreenter blockitem_list_opt nsleave Trbrace  (21)
	nsreenter : .  (3)

	.  reduce 3

	nsreenter  goto 136


state 82
	function_declarator : pointer function_direct_declarator .  (22)

	.  reduce 22


state 83
	function_direct_declarator : direct_declarator . Tlparen nsenter parameter_type_list nsleave Trparen  (24)
	function_direct_declarator : direct_declarator . Tlparen Trparen  (25)
	declarator : pointer direct_declarator .  (26)
	direct_declarator : direct_declarator . Tlbracket Trbracket  (32)
	direct_declarator : direct_declarator . Tlbracket typequalifiers assignment_expression Trbracket  (33)
	direct_declarator : direct_declarator . Tlparen Trparen  (34)
	direct_declarator : direct_declarator . Tlparen nsenter parameter_type_list nsleave Trparen  (35)

	Tlbracket  shift 84
	Tlparen  shift 85
	Tcomma  reduce 26
	Tasgn  reduce 26
	Tsemi  reduce 26


state 84
	direct_declarator : direct_declarator Tlbracket . Trbracket  (32)
	direct_declarator : direct_declarator Tlbracket . typequalifiers assignment_expression Trbracket  (33)
	typequalifiers : .  (89)

	Trbracket  shift 137
	Tidentifier  reduce 89
	Tenum_const  reduce 89
	Tcharacter_cst  reduce 89
	Tinteger_cst  reduce 89
	Tfloating_cst  reduce 89
	Tstring_literal  reduce 89
	Tsizeof  reduce 89
	Tplusplus  reduce 89
	Tminusminus  reduce 89
	Trestrict  reduce 89
	Tconst  reduce 89
	Tvolatile  reduce 89
	Tamp  reduce 89
	Ttilde  reduce 89
	Tbang  reduce 89
	Tplus  reduce 89
	Tminus  reduce 89
	Tstar  reduce 89
	Tlparen  reduce 89

	typequalifiers  goto 138


state 85
	function_direct_declarator : direct_declarator Tlparen . nsenter parameter_type_list nsleave Trparen  (24)
	function_direct_declarator : direct_declarator Tlparen . Trparen  (25)
	direct_declarator : direct_declarator Tlparen . Trparen  (34)
	direct_declarator : direct_declarator Tlparen . nsenter parameter_type_list nsleave Trparen  (35)
	nsenter : .  (1)

	Trparen  shift 139
	Ttypedef_name  reduce 1
	Trestrict  reduce 1
	Tchar  reduce 1
	Tshort  reduce 1
	Tint  reduce 1
	Tlong  reduce 1
	Tunsigned  reduce 1
	Tfloat  reduce 1
	Tdouble  reduce 1
	Tconst  reduce 1
	Tvolatile  reduce 1
	Tvoid  reduce 1
	Tstruct  reduce 1
	Tunion  reduce 1
	Tenum  reduce 1

	nsenter  goto 140


state 86
	inttype : Tlong Tlong Tint .  (66)

	.  reduce 66


state 87
	inttype : Tunsigned Tshort Tint .  (69)

	.  reduce 69


state 88
	inttype : Tunsigned Tlong Tint .  (72)

	.  reduce 72


state 89
	inttype : Tunsigned Tlong Tlong .  (73)
	inttype : Tunsigned Tlong Tlong . Tint  (74)

	Tint  shift 141
	Tidentifier  reduce 73
	Tcomma  reduce 73
	Tstar  reduce 73
	Tlbracket  reduce 73
	Tlparen  reduce 73
	Trparen  reduce 73


state 90
	declaration : Ttypedef itype declarator Tsemi .  (11)

	.  reduce 11


state 91
	declarator : pointer direct_declarator .  (26)
	direct_declarator : direct_declarator . Tlbracket Trbracket  (32)
	direct_declarator : direct_declarator . Tlbracket typequalifiers assignment_expression Trbracket  (33)
	direct_declarator : direct_declarator . Tlparen Trparen  (34)
	direct_declarator : direct_declarator . Tlparen nsenter parameter_type_list nsleave Trparen  (35)

	Tlbracket  shift 84
	Tlparen  shift 92
	Tcomma  reduce 26
	Tasgn  reduce 26
	Trparen  reduce 26
	Tsemi  reduce 26

